--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <!-- banner secion -->
 
         <div class="container mx-auto p-3">
-            <div class=" justify-evenly items-center md:flex md:flex-col lg:flex-row">
-                <div class="space-y-4   ">
+            <div class=" justify-evenly items-center flex lg:flex-row sm:flex-col md:flex-row ">
+                <div class="space-y-4 ">
                     <h1 class=" text-6xl font-bold uppercase">  
                         <span class=" text-yellow-400">Be the Penguins </span>
                         <br>
@@ -184,7 +184,7 @@
 
     <section>
         <div class="container mx-auto my-14">
-            <div class="grid gap-3  md:grid-cols-1 lg:grid-cols-2">
+            <div class="grid gap-3  md:grid-cols-2 lg:grid-cols-2">
                 <div class="shadow-xl rounded-lg">
                     <div class="flex justify-center items-center space-x-3 p-5">
                        <div>
@@ -197,11 +197,11 @@
                     </div>
                 </div>
 
-                <div class=" row-span-3 ">
+                <div class=" row-span-3  -order-1 md:order-none lg:order-none ">
                     <img src="/images/shopping.png" alt="">
                 </div>
 
-                <div class="shadow-xl rounded-lg">
+                <div class="shadow-xl rounded-lg ">
                     <div class="flex justify-center items-center space-x-3 p-5">
                        <div>
                         <img class="w-20" src="/images/box.png" alt="">
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shadow-xl rounded-lg">
+                <div class="shadow-xl rounded-lg ">
                     <div class="flex justify-center items-center space-x-3 p-5">
                        <div>
                         <img class="w-20" src="/images/question.png" alt="">
